2.2/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: image-data
          persistentVolumeClaim:
            claimName: todo-app-claim

      containers:
        - name: todo-app
          image: asfalfa/todo-app:v8
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: image-data
              mountPath: /data

        - name: todo-backend
          image: asfalfa/todo-backend:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
